<resources>
    <string name="app_name">AppDivises_KarenSamso</string>
    <string name="action_settings">Settings</string>
    <string name="title">Converter</string>
    <string name="subtitle">Euro/Dollar - Dollar/Euro</string>
    <string name="select">Type of conversion to apply</string>
    <string name="toDollar">Euro -> Dollar</string>
    <string name="toEuro">Dollar -> Euro</string>
    <string name="introduce">Commission (0-5)%</string>
    <string name="convert">Convert</string>
    <string name="euroSign">€</string>
    <string name="dollarSign">$</string>
    <string name="percentSign">%</string>
    <string name="guardar">RES</string>
    <string name="error">Introduce a valid commission</string>
    <string name="euro1Sign">1€ = </string>
    <string name="dollar1Sign">1$ = </string>
    <string name="dollarRate">0.893136</string>
    <string name="euroRate">1.11965</string>
</resources>
