<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/karensamso"
    android:orientation="vertical"
    android:background="#fffce7ea">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7" >

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title"
            android:id="@+id/titleText"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="#ff32786c"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_weight="2" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/subtitle"
            android:id="@+id/subtitleText"
            android:textSize="27sp"
            android:textColor="#ff32786c"
            android:textStyle="bold"
            android:layout_weight="20" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.55">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/select"
            android:id="@+id/selectText"
            android:textSize="25sp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/radioGroup"
            android:gravity="center_horizontal"
            android:layout_weight="1">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/toDollar"
                android:id="@+id/radioButtonEuro"
                android:checked="true"
                android:textSize="25sp"
                android:buttonTint="#ff32786c"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/toEuro"
                android:id="@+id/radioButtonDollar"
                android:checked="false"
                android:textSize="25sp"
                android:layout_weight="1" />
        </RadioGroup>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">

        <Space
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editTextQuant"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:selectAllOnFocus="false"
            android:phoneNumber="false"
            android:hint="0.00" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/euroSign"
            android:id="@+id/signEuro"
            android:textSize="35sp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">

        <Space
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/euro1Sign"
            android:id="@+id/sign1Euro"
            android:textSize="35sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editTextConv"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:hint="1.11965" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dollarSign"
            android:id="@+id/signDollar2"
            android:textSize="35sp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/introduce"
            android:id="@+id/introduceText"
            android:textSize="25sp"
            android:layout_weight="1.8" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">

        <Space
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editTextCom"
            android:textSize="30sp"
            android:textAlignment="textEnd"
            android:gravity="center_horizontal"
            android:hint="0"
            android:maxLength="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/percentSign"
            android:id="@+id/signPercent"
            android:textSize="35sp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/convert"
            android:id="@+id/convertButton"
            android:textSize="25sp"
            android:background="#ff32786c"
            android:layout_weight="1" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">

        <Space
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:id="@+id/resultText"
            android:textSize="42sp"
            android:textAlignment="textEnd"
            android:gravity="center_horizontal"
            android:hint="0.00" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dollarSign"
            android:id="@+id/signDollar"
            android:textSize="45sp" />
    </LinearLayout>

</LinearLayout>
